app_list: Set AppList as parent of uninstall dialog

Currently, when the uninstall dialog is opened from the Launcher, the Launcher
is dismissed, which is confusing to the user. By parenting the dialog to the
Launcher, the UX is much better.

Because we cannot directly access Ash windows anymore, this fix requires us to
explicitly set the dialog's parent window via MUS properties.

TEST=manually verified + new browser tests
BUG=814619

Change-Id: Ic25cb376191aaba8048f95fa5d0032b0328b8bc8
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1496447
Reviewed-by: Devlin <rdevlin.cronin@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Tim Song <tengs@chromium.org>
Cr-Commit-Position: refs/heads/master@{#638016}
Former-commit-id: fb08feb52da0cfd813ff9f409d620aa59371601f