ash/shell_test_api.h
@@ -63,6 +63,9 @@ class ShellTestApi : public mojom::ShellTestApi {
   void ToggleOverviewMode(ToggleOverviewModeCallback cb) override;
   void AddRemoveDisplay() override;
   void SetMinFlingVelocity(float velocity) override;
+  void GetChildWindowCountInContainer(
+      int container_id,
+      GetChildWindowCountInContainerCallback cb) override;
 
  private:
   Shell* shell_;  // not owned
